# sonyflake-py

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-doc.txt  requirements-test.txt  setup.py
.github/workflows/: lint.yml  publish.yml
docs/src/: changelog.md  quickstart.md  reference.md
sonyflake/: __init__.py  about.py  round_robin.py  sonyflake.py
tests/: test_round_robin.py  test_sonyflake.py
